# fig2code

./: README-HK.md  README.md
fig2json/: Cargo.toml  IMPORTANT.md  LICENSE  README.md
fig2json/scripts/: build-deploy
fig2json/src/: doctor.rs  error.rs  lib.rs  main.rs  types.rs
fig2json/src/blobs/: mod.rs  parser.rs  substitution.rs
fig2json/src/parser/: chunks.rs  compression.rs  header.rs  mod.rs
fig2json/src/schema/: decoder.rs  mod.rs  tree.rs
local-server/: Cargo.toml  README.md
local-server/src/: main.rs
local-server/src/server/: http.rs
openspec/changes/fix-tree-missing-siblings/: design.md  tasks.md
parse-figma-canvas/: Cargo.toml  README.md
parse-figma-canvas/openspec/changes/archive/2026-06-16-add-output-flag-and-all-command/: design.md  proposal.md  tasks.md
parse-figma-canvas/openspec/changes/archive/2026-06-16-add-output-flag-and-all-command/specs/batch-all-command/: spec.md
parse-figma-canvas/openspec/changes/archive/2026-06-16-add-output-flag-and-all-command/specs/output-file-routing/: spec.md
parse-figma-canvas/openspec/changes/archive/2026-06-16-add-readme-docs/: design.md  tasks.md
parse-figma-canvas/openspec/changes/fix-tree-missing-siblings/: proposal.md
parse-figma-canvas/openspec/changes/multi-page-support/: proposal.md  tasks.md
parse-figma-canvas/openspec/changes/multi-page-support/specs/multi-page-processing/: spec.md
parse-figma-canvas/scripts/: build-deploy
parse-figma-canvas/src/: main.rs
prompts/: FIGMA_ANALYSIS_AGENT_PROMPT.md  FIGMA_SPEC_AGENT_PROMPT.md  VERIFICATION_AGENT_PROMPT.md
src/: main.rs
(+77 files in other folders)
