[package]
name = "parse-figma-canvas"
version = "0.1.0"
edition = "2021"
description = "CLI to extract structured data from Figma canvas.raw.json for AI agents"

[[bin]]
name = "parse-figma-canvas"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
